Virtual shutdown hook, use executor to spawn test threads instead of scope.