@@ -71,7 +71,6 @@
 				<configuration>
 					<source>24</source>
 					<target>24</target>
-					<compilerArgs>--enable-preview</compilerArgs>
 				</configuration>
 			</plugin>
 		</plugins>
